Added MIMO Block fading with CSIR chapter to manual, and created csir_fading folder with achievability bound code, capacity / dispersion calculation code, and a file to generate plots.

--- a/documentation/manual.tex
+++ b/documentation/manual.tex
@@ -527,7 +527,7 @@ General info:
 \begin{itemize}
 \item Maintainer: A. Collins \url{<austinc@mit.edu>}
 
-\item Main references: XXXX
+\item Main references: Coming Soon
 
 \item Example: See Figure~\ref{fig:block_mimo_summary}
 
