--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -63,3 +63,9 @@
 	Title = {Minimum energy to send $k$ bits with and without feedback},
 	Volume = 57,
 	Year = 2011}
+
+@article{YDP15,
+	author = {W. Yang and G. Durisi and Y. Polyanskiy},
+	title =  "Minimum energy to send k bits over multiple-antenna fading channels", 
+	journal={arXiv:1507.03843}, month=jul, year=2015
+}
