--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -67,5 +67,5 @@
 @article{YDP15,
 	author = {W. Yang and G. Durisi and Y. Polyanskiy},
 	title =  "Minimum energy to send k bits over multiple-antenna fading channels", 
-	journal={arXiv:1507.03843}, month=jul, year=2015
+	journal={arXiv:1507.03843v1}, month=jul, year=2015
 }
