computed converse curve for energy_nocsi.eps

--- a/documentation/manual.tex
+++ b/documentation/manual.tex
@@ -660,6 +660,8 @@ N_0}$ divide by \verb|lm|).
 
 This script generates two figures, shown on Fig.~\ref{fig:ebno_example}.
 
+\textbf{Note:} Script takes several hours to finish.
+
 \begin{figure}
 \centering
 \begin{verbatim}
