--- a/documentation/refs.bib
+++ b/documentation/refs.bib
@@ -33,6 +33,16 @@
 	Volume = {60},
 	Year = {2014}}
 
+@article{yang15-09,
+	Author = {Wei Yang and Giuseppe Caire and Giuseppe Durisi and Yury Polyanskiy},
+	Journal = IEEE_J_IT,
+	Month = Sep,
+	Number = {9},
+	Pages = {4598--4615},
+	Title = {Optimum power control at finite blocklength},
+	Volume = {61},
+	Year = {2015}}
+
 @article{durisi14-12a,
 	Author = {Giuseppe Durisi and Tobias Koch and Johan \"{O}stman and Yury Polyanskiy and Wei Yang},
 	Date-Added = {2014-12-09 14:07:56 +0000},
