--- a/documentation/manual.tex
+++ b/documentation/manual.tex
@@ -143,7 +143,7 @@ General info:
 \begin{verbatim}
 	> plot_v3(10, 0.001, 1, 100:20:1000)
 \end{verbatim}
-\includegraphics[height=5cm]{plots/awgn_plot3_ex}
+\includegraphics[height=7cm]{plots/awgn_plot3_ex}
 \caption{Code and resulting picture for AWGN bounds}\label{fig:awgn_example}
 \end{figure}
 
@@ -269,7 +269,7 @@ General info:
 
    \begin{figure}[t]
     \centering
-      \includegraphics[width=.9\textwidth]{./plots/snr6eps03M2}
+      \includegraphics[height=7cm]{./plots/snr6eps03M2.pdf}
     \caption{Maximum coding rate $R^\ast(n_c,l,\epsilon,\rho)$ for $2\times 2$ MIMO system operating over a Rayleigh block-fading channel with coherence time $n_c$.
     Each packet spans~$l$ coherence intervals. The packet size is $168$ channel uses. The packet error rate is $\epsilon=10^{-3}$.
     The SNR is $\rho=6$ dB.}
@@ -423,7 +423,7 @@ Currently, we do not have code for MIMO achievability and converse bounds that h
 
 \begin{figure}[t]
 	\centering
-	\includegraphics[scale=0.8]{plots/quasi-static-simo.pdf}
+	\includegraphics[height=7cm]{plots/quasi-static-simo.pdf}
 \vspace{-1.5mm}
 \caption{Achievability and converse bounds for a quasi-static SIMO Rician-fading channel with $K$-factor equal to $20$ dB, two receive antennas, $\text{SNR}=-1.55 $ dB, and $\epsilon=10^{-3}$. 
 \label{fig:bounds-simo}}
@@ -661,7 +661,7 @@ X^n \frac{\sqrt{nTP}}{\|X^n\|_F}
 \end{align}
 And $Q_Y$ is the output distribution when the input is iid Gaussian $\mathcal{N}(0,P/n_t)$.  Both of these are fairly easily adjustable in the code.
 
-Note that the \verb|iter| variable in the code sets the number of Monte Carlo iterations.  This should be taken to be $~< 100/\epsilon$.  For small $\epsilon$ (e.g. $10^{-3}$, you may want to let the code run overnight.
+Note that the \verb|iter| variable in the code sets the number of Monte Carlo iterations.  This should be taken to be $~< 100/\epsilon$.  For small $\epsilon$ (e.g. $10^{-3}$), you may want to let the code run overnight.
 
 \section{Normal Approximation: \texttt{MIMO\_csir\_normapx()}}
 
